--- a/book/src/lshort-base.tex
+++ b/book/src/lshort-base.tex
@@ -2,7 +2,7 @@
 % Contents: Main Input File of the LaTeX2e Introduction
 % $Id$
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% lshort.tex - The not so short introduction to LaTeX   
+% lshort.tex - The not so short introduction to LaTeX
 %                                                      by Tobias Oetiker
 %                                                     oetiker@ee.ethz.ch
 %
@@ -17,7 +17,7 @@
 %      things.tex, typeset.tex, math.tex, lssym.tex, spec.tex,
 %      lshort.sty, fancyheadings.sty
 %
-% Further the  verbatim.sty and the layout.sty 
+% Further the  verbatim.sty and the layout.sty
 % from the LaTeX Tools distribution is
 % required.
 %
@@ -27,25 +27,14 @@
 %
 % ---------------------------------------------------------------------
 
-\include{contrib}
-\include{overview}
 \tableofcontents
-\listoffigures
-\listoftables
-\enlargethispage{\baselineskip}
 \mainmatter
+\setlength{\parindent}{0em}
+\setlength{\parskip}{1em}
 \include{things}
-\include{typeset}
-\include{math} 
-\include{lssym}
-\include{spec}
-\include{graphic}
-\include{custom}
-\include{appendix}
 \backmatter
-\include{biblio}
 \refstepcounter{chapter}
-\addcontentsline{toc}{chapter}{Index} 
+\addcontentsline{toc}{chapter}{Index}
 \printindex
 \end{document}
 
